# KV-Eco-Transit-Dynamic-Headway-System

./: AGENTS.md
backend/: .gitignore  main.py  pyproject.toml
backend/src/: database.py  main.py  models.py
backend/src/ai/: prompts.py  service.py
backend/src/engine/: service.py
backend/src/ingestion/: malaysia_open_data.py
backend/src/stations/: models.py  schemas.py
backend/src/telemetry/: models.py  schemas.py  service.py
backend/src/trains/: dependencies.py  models.py  router.py  schemas.py
mobile/: package-lock.json
web/: package-lock.json  package.json
web/app/: page.tsx
web/components/: ChatInterface.tsx  LiveMap.tsx  Map.tsx
