[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "geoalchemy2>=0.20.0",
    "gtfs-realtime-bindings>=2.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langsmith>=0.9.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
